--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "path": "^0.12.7",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "ruby": "^0.6.1",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1"
   },
